tests/baselines/reference/parser512084.errors.txt
parser512084.ts(2,1): error TS1005: '}' expected.


==== parser512084.ts (1 errors) ====
    class foo {
    
    
!!! error TS1005: '}' expected.